[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "llmwiki"
version = "0.1.0"
description = "A Python CLI for maintaining LLM-generated personal markdown wikis."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "UdayaPrakashST" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
llmwiki = "llmwiki.cli:main"

[tool.setuptools.packages.find]
include = ["llmwiki*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
